# deeprhythm-colossal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
deeprhythm_colossal/: batch_infer.py  dataloader.py  infer.py  inference.py  training.py  utils.py
deeprhythm_colossal/audio_proc/: bandfilter.py  hcqm.py  onset.py
deeprhythm_colossal/dataset/: clip_dataset.py  song_dataset.py
deeprhythm_colossal/model/: frame_cnn.py  infer.py  predictor.py  train.py
splits/split_2025-07-24_header/: test_split.csv  validation_split.csv
splits/split_2025-07-24_maidr/: test_split.csv  validation_split.csv
tests/: test_aws.py  test_utils.py
