[project]
name = "deeprhythm_colossal"
version = "0.1"
authors = [
  { name="huwcheston", email="huw@colossal.fm" },
]
description = "Modifications to deeprhythm for Colossal"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8"
librosa = "*"
torch = "*"
pandas = "*"
numpy = "*"
nnAudio = "*"
torchaudio = "*"
pytest = "*"
pedalboard = "*"
boto3 = "*"
sqlalchemy = "*"
tqdm = "*"
dotenv = "*"
mir_eval = "*"
psycopg2-binary = "*"